[package]
name = "kanye-said"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
tokio = { version = "1.12.0", features=["full"] }
exitfailure = "0.5.1"